
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void swap(int *p, int *q) {
 int t;
 t = *p;
 *p = *q;
 *q = t;
}
